--- a/config.yml
+++ b/config.yml
@@ -2,4 +2,4 @@ title: Max Burchett
 #logo: put picture here (github repo file path)
 #description: description under pic
 #show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minima
