--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,5 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
 title: Max Burchett
 #logo: put picture here (github repo file path)
 #description: description under pic
-#show_downloads: true
-theme: jekyll-theme-minima
+show_downloads: true
+theme: jekyll-theme-Minimal
